Horizontal scroll issue fix for dialogs

--- a/src/main/webapp/styles/less/wm-widgets.less
+++ b/src/main/webapp/styles/less/wm-widgets.less
@@ -1736,6 +1736,7 @@ bs-datepicker-container, bs-daterangepicker-container {
 /*overriding bootstrap styles to avoid UI flicker on dialog open.*/
 body.modal-open {
   margin-right: 0;
+  overflow: hidden;
   .modal {
     overflow-y: auto;
   }
